# spammer_web_service

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
apps/: dependencies.py  pagination.py  schemas.py
apps/accounts/: models.py  router.py  schemas.py  service.py
apps/chats/: models.py  router.py  schemas.py  service.py
apps/projects/: models.py  router.py  schemas.py  service.py
apps/proxies/: models.py  router.py  schemas.py  service.py
apps/subscriptions/: models.py  router.py  schemas.py  service.py
db/: __init__.py
settings/: __init__.py
tests/accounts/: test_api.py
tests/chats/: test_api.py
tests/projects/: test_api.py
tests/proxies/: test_api.py
tests/subscriptions/: test_api.py
